Fix launch4j builder for Java 9/10